Fix build bug